--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
   "devDependencies": {
     "@babel/core": "^7.16.5",
     "babel-loader": "^8.2.3",
+    "copy-webpack-plugin": "^10.2.0",
     "html-webpack-plugin": "^5.5.0",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.7.0"
+  },
+  "dependencies": {
+    "dotenv-webpack": "^7.0.3"
   }
 }
